# library-templates

./: CMakeLists.txt  LICENSE  README.md
00-test-app/test/: CMakeLists.txt
00-test-app/test/src/: test.c
00-test-app/test/test/: all_tests.cpp  test_test.cpp
00-test-utils/utils/: CMakeLists.txt
00-test/spectre_message_service/: CMakeLists.txt
00-test/spectre_message_service/include/spectre_message_service/: message_service.h  spectre.h
00-test/spectre_message_service/src/: main.c  message_service.c  spectre.c
02-c-cmake-library-template/{{cookiecutter.project_name}}/: CMakeLists.txt
02-c-cmake-library-template/{{cookiecutter.project_name}}/test/: test_{{cookiecutter.module_name}}.cpp
02-c-cmake-template/: cookiecutter.json
02-c-cmake-template/{{cookiecutter.project_name}}/: CMakeLists.txt
02-c-cmake-template/{{cookiecutter.project_name}}/include/{{cookiecutter.project_name}}/: {{cookiecutter.module_name}}.h
03-c-cmake-project-template/: cookiecutter.json
03-c-cmake-project-template/{{cookiecutter.project_name}}/: README.md
03-c-cmake-project-template/{{cookiecutter.project_name}}/src/: CMakeLists.txt
03-c-cmake-project-template/{{cookiecutter.project_name}}/src/app/: CMakeLists.txt
03-c-cmake-project-template/{{cookiecutter.project_name}}/src/app/src/: main.c
examples/MyProject/: .clang-format  README.md
examples/MyProject/src/: CMakeLists.txt
examples/MyProject/src/app/: CMakeLists.txt
examples/MyProject/src/utils/: CMakeLists.txt
examples/MyProject/src/utils/include/utils/: logger.h
examples/MyProject/src/utils/test/: all_tests.cpp
examples/test/: CMakeLists.txt
examples/test/include/test/: test.h
examples/utils/: CMakeLists.txt
examples/utils/include/utils/: logger.h
examples/utils/src/: logger.c
